[package]
name = "cumsum"
version = "1.0.0"
authors = ["Bram van den Heuvel <bram@vandenheuvel.online>"]
description = "Cumulative sum"
repository = "https://github.com/vandenheuvel/cumsum"
edition = "2021"
license = "GPL-3.0-only"


keywords = ["cumsum", "cumulative", "sum", "array"]
categories = ["algorithms", "data-structures"]
